8388373: Exclude preview warnings from '-Xlint' by default